Optimization: save dozens or hundreds of object creations by changing "new Integer" to "Integer.valueOf" in all the type mappings. Change one system.out.println to logger.info.